<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3sp"
            android:text="@string/batteryStatus"
            android:textColor="#FFFFFF"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/tvBatteryStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3sp"
            android:textColor="#FFFFFF"
            android:textSize="18dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3sp"
            android:text="@string/batteryPlug"
            android:textColor="#FFFFFF"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/tvBatteryPlug"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3sp"
            android:textColor="#FFFFFF"
            android:textSize="18dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3sp"
            android:text="@string/batteryLevel"
            android:textColor="#FFFFFF"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/tvBatteryLevel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3sp"
            android:textColor="#FFFFFF"
            android:textSize="18dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3sp"
            android:text="@string/batteryHealth"
            android:textColor="#FFFFFF"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/tvBatteryHealth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3sp"
            android:textColor="#FFFFFF"
            android:textSize="18dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3sp"
            android:text="@string/batteryTemperature"
            android:textColor="#FFFFFF"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/tvBatteryTemperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3sp"
            android:textColor="#FFFFFF"
            android:textSize="18dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3sp"
            android:text="@string/batteryVoltage"
            android:textColor="#FFFFFF"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/tvBatteryVoltage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3sp"
            android:textColor="#FFFFFF"
            android:textSize="18dp" />
    </LinearLayout>

</LinearLayout>